--- a/ABCD.HTML
+++ b/ABCD.HTML
@@ -6,24 +6,24 @@
 <table border="6" bordercolor="GREEN" WIDTH="100%">
 <tr>
 <td colspan="42"><center><MaRQUEE behavior="alternate" direction="left"><B>*INTRODUCTION OF HTML*</B></center></TD>
-<TD colspan="12"><MaRQUEE behavior="alternate" direction="left"><font color="blue"><u><b>TO GO HOME PAGE</b></u></font></TD>
+<TD colspan="12"><MaRQUEE behavior="alternate" direction="left"><font color="blue"><u><b><a href="https://www.javatpoint.com/html-tutorial">TO GO HOME PAGE </a></b></u></font></TD>
 </tr>
 <TR>
 <TD COLSPAN="42"><B><MaRQUEE behavior="alternate" direction="left" bgcolor="orange">01.BASIC TAG OF HTML</B></TD>
-<TD COLSPAN="12"> <font color="blue"><MaRQUEE behavior="alternate" direction="left" bgcolor="orange"><b><font color="blue"><u>CLICK HERE TO GO</u></font></b></font></TD>
+<TD COLSPAN="12"> <font color="blue"><MaRQUEE behavior="alternate" direction="left" bgcolor="orange"><b><font color="blue"><u><a href ="https://www.tutorialspoint.com/html/html_basic_tags.htm">CLICK HERE TO GO</a></u></font></b></font></TD>
 </TR>
 <TR>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left"bgcolor="orange">HTML TAG</TD>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left"bgcolor="orange">HEAD TAG</TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left"bgcolor="orange">TITLE TAG</TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left"bgcolor="orange">BODY TAG</TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" bgcolor="orange">HTML TAG</TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" bgcolor="orange">HEAD TAG</TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" bgcolor="orange">TITLE TAG</TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" bgcolor="orange">BODY TAG</TD>
 </TR>
 <TR>
 <TD COLSPAN="42"><MaRQUEE behavior="alternate" direction="left"bgcolor="lightgreen"><b>02. DREPRECATED TAG</b> </TD>
 <TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left"bgcolor="lightgreen"><b><font color="blue"><u>CLICK HERE TO GO</u></font></b></TD>
 </TR><TR>
-<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen">CENTER TAG</TD>
-<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen">FONT TAG</TD>
+<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="https://www.w3schools.com/tags/tag_center.ASP" >CENTER TAG</a></TD>
+<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="https://www.javatpoint.com/html-font-tag">FONT TAG</a> </TD>
 </TR><TR>
 <TD COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue"><b>03.HEADING TAG</b> </TD>
 <TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue"><b><font color="blue"><u>CLICK HERE TO GO</u> </font></b></TD></TR>
