--- a/ABCD.HTML
+++ b/ABCD.HTML
@@ -6,83 +6,85 @@
 <table border="6" bordercolor="GREEN" WIDTH="100%">
 <tr>
 <td colspan="42"><center><MaRQUEE behavior="alternate" direction="left"><B>*INTRODUCTION OF HTML*</B></center></TD>
-<TD colspan="12"><MaRQUEE behavior="alternate" direction="left"><font color="blue"><u><b><a href="https://www.javatpoint.com/html-tutorial">TO GO HOME PAGE </a></b></u></font></TD>
+<TD colspan="12"><u><b><a href="https://www.javatpoint.com/html-tutorial" target="_blank"> TO GO HOME PAGE </a></b></u></font></TD>
 </tr>
 <TR>
-<TD COLSPAN="42"><B><MaRQUEE behavior="alternate" direction="left" bgcolor="orange">01.BASIC TAG OF HTML</B></TD>
-<TD COLSPAN="12"> <font color="blue"><MaRQUEE behavior="alternate" direction="left" bgcolor="orange"><b><font color="blue"><u><a href ="https://www.tutorialspoint.com/html/html_basic_tags.htm">CLICK HERE TO GO</a></u></font></b></font></TD>
+<TD COLSPAN="42"><B>01.BASIC TAG OF HTML</B></TD>
+<TD COLSPAN="12"> <font color="blue"><b><font color="blue"><u><a href ="https://www.tutorialspoint.com/html/html_basic_tags.htm" target ="_blank">CLICK HERE TO GO</a></u></font></b></font></TD>
 </TR>
 <TR>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" bgcolor="orange">HTML TAG</TD>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" bgcolor="orange">HEAD TAG</TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" bgcolor="orange">TITLE TAG</TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" bgcolor="orange">BODY TAG</TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="teal"><a href="" target = "_blank">HTML TAG</a></TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="yellow"><a href="" target = "_blank">HEAD TAG</a></TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" ><a href="" target = "_blank">TITLE TAG</a></TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="" target = "_blank">BODY TAG</a></TD>
 </TR>
 <TR>
-<TD COLSPAN="42"><MaRQUEE behavior="alternate" direction="left"bgcolor="lightgreen"><b>02. DREPRECATED TAG</b> </TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left"bgcolor="lightgreen"><b><font color="blue"><u>CLICK HERE TO GO</u></font></b></TD>
+<TD COLSPAN="42"><b>02. DREPRECATED TAG</b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR><TR>
-<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="https://www.w3schools.com/tags/tag_center.ASP" >CENTER TAG</a></TD>
-<TD COLSPAN="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="https://www.javatpoint.com/html-font-tag">FONT TAG</a> </TD>
-</TR><TR>
-<TD COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue"><b>03.HEADING TAG</b> </TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue"><b><font color="blue"><u>CLICK HERE TO GO</u> </font></b></TD></TR>
-<TR>
-<TD COLSPAN="26"><MaRQUEE behavior="alternate" direction="left"bgcolor="skyblue">HTML HEADING TAG </TD>
-<TD COLSPAN="28"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue">HTML COMMENT TAG</TD>
+<TD COLSPAN="27"><a href="https://www.w3schools.com/tags/tag_center.ASP" target="_blank"> CENTER TAG</a></TD>
+<TD COLSPAN="27"><a href="https://www.javatpoint.com/html-font-tag" target="_blank"> FONT TAG</a> </TD>
 </TR>
 <TR>
-<TD COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00FF00"><b>04. PARAGRAPH TAG</b> </TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00FF00"><b><font color="blue"><u>CLICK HERE TO GO</u></font></b> </TD>
+<TD COLSPAN="42"><b>03.HEADING TAG</b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u> </font></b></TD>
 </TR>
 <TR>
-<TD colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="green">HTML paragraph tag</td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="green"> HTML line break tag </td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="green">HTML rules tag</td>
-</tr>
-<tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="yellow"><b>05. TEXT FORMATTING TAG</b> </td>
-<td COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="yellow"><b><font color="blue"><u>CLICK HERE TO GO</u></font></b></TD>
+<TD COLSPAN="26"><MaRQUEE behavior="alternate" direction="left"bgcolor="skyblue"><a href="" target = "_blank">HTML HEADING TAG </a></TD>
+<TD COLSPAN="28"><MaRQUEE behavior="alternate" direction="left" bgcolor="white"><a href="" target = "_blank">HTML COMMENT TAG</a></TD>
 </TR>
 <TR>
-<TD colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00">Bold tag </td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="yellow">italic tag</td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00">underline tag</td>
+<TD COLSPAN="42"><b>04. PARAGRAPH TAG</b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
+</TR>
+<TR>
+<TD colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="" target = "_blank">HTML paragraph tag</a></td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="olive"><a href="" target = "_blank"> HTML line break tag</a> </td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="white"><a href="" target = "_blank">HTML rules tag</a></td>
 </tr>
 <tr>
-<td colspan="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#0000FF"><b>06. LIST TAG</b> </td>
-<td colspan="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00ff00"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b> </TD>
+<td COLSPAN="42"><b>05. TEXT FORMATTING TAG</b> </td>
+<td COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
+</TR>
+<TR>
+<TD colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="" target = "_blank">Bold tag</a> </td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="lime"><a href="" target = "_blank">italic tag</a></td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="" target = "_blank">underline tag</a></td>
 </tr>
 <tr>
-<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000">Ordered List </td>
-<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00ff00">Unordered List </td>
+<td colspan="42"><b>06. LIST TAG</b> </td>
+<td colspan="12"><b><font color="blue"><u><a href="" target = "_blank"> CLICK HERE TO GO</a></u></font></b> </TD>
 </tr>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="voilet"><b>07.TABLE TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b> </TD>
+<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"> <a href="" target = "_blank">Ordered List </a></td>
+<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00ff00"><a href="" target = "_blank">Unordered List </a></td>
+</tr>
+<tr>
+<td COLSPAN="42"><b>07.TABLE TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="orange"><b>08.ANCHOR TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#yellow"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b> </TD>
+<td COLSPAN="42"><b>08.ANCHOR TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b>09.EMBED TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b> </TD>
+<td COLSPAN="42"><b>09.EMBED TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank"> CLICK HERE TO GO </a></u></font></b> </TD>
 </TR>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b>10. IMAGE TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="pink"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b></TD>
+<td COLSPAN="42"><b>10. IMAGE TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#green"><b>11. MaRQUEE TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b></TD>
+<td COLSPAN="42"><b>11. MaRQUEE TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="skyblue"><b>12.FORM TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="slide" direction="left" bgcolor="#green"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b>
+<td COLSPAN="42"><b>12.FORM TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO </a></u></font></b>
 <tr>
-<td COLSPAN="42"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"><b>13.FRAMESETS TAG</b></TD>
-<TD COLSPAN="12"><MaRQUEE behavior="alternate" direction="right" bgcolor="#808000"><b><font color="blue"><u> CLICK HERE TO GO</u></font></b> </TD>
+<td COLSPAN="42"><b>13.FRAMESETS TAG</b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 </TABLE>
 </BODY>
