--- a/ABCD.HTML
+++ b/ABCD.HTML
@@ -13,78 +13,78 @@
 <TD COLSPAN="12"> <font color="blue"><b><font color="blue"><u><a href ="https://www.tutorialspoint.com/html/html_basic_tags.htm" target ="_blank">CLICK HERE TO GO</a></u></font></b></font></TD>
 </TR>
 <TR>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="teal"><a href="" target = "_blank">HTML TAG</a></TD>
-<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="yellow"><a href="" target = "_blank">HEAD TAG</a></TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" ><a href="" target = "_blank">TITLE TAG</a></TD>
-<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="" target = "_blank">BODY TAG</a></TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="#FAEBD7"><a href="https://www.geeksforgeeks.org/html-tags-a-to-z-list/" target = "_blank">HTML TAG</a></TD>
+<TD COLSPAN="14"><MaRQUEE behavior="alternate" direction="left" bgcolor="teal"><a href="https://www.w3schools.com/tags/tag_head.asp#:~:text=Definition%20and%20Usage,scripts%2C%20and%20other%20meta%20information." target = "_blank">HEAD TAG</a></TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" ><a href="https://www.w3schools.com/tags/tag_title.asp" target = "_blank">TITLE TAG</a></TD>
+<TD COLSPAN="13"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="https://www.w3schools.com/tags/tag_body.asp" target = "_blank">BODY TAG</a></TD>
 </TR>
 <TR>
 <TD COLSPAN="42"><b>02. DREPRECATED TAG</b> </TD>
-<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="https://www.geeksforgeeks.org/html-deprecated-tags/" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR><TR>
 <TD COLSPAN="27"><a href="https://www.w3schools.com/tags/tag_center.ASP" target="_blank"> CENTER TAG</a></TD>
 <TD COLSPAN="27"><a href="https://www.javatpoint.com/html-font-tag" target="_blank"> FONT TAG</a> </TD>
 </TR>
 <TR>
 <TD COLSPAN="42"><b>03.HEADING TAG</b> </TD>
-<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u> </font></b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="https://www.w3schools.com/html/html_headings.asp" target = "_blank">CLICK HERE TO GO</a></u> </font></b></TD>
 </TR>
 <TR>
-<TD COLSPAN="26"><MaRQUEE behavior="alternate" direction="left"bgcolor="skyblue"><a href="" target = "_blank">HTML HEADING TAG </a></TD>
-<TD COLSPAN="28"><MaRQUEE behavior="alternate" direction="left" bgcolor="white"><a href="" target = "_blank">HTML COMMENT TAG</a></TD>
+<TD COLSPAN="26"><MaRQUEE behavior="alternate" direction="left"bgcolor="skyblue"><a href="https://www.w3schools.com/html/html_headings.asp" target = "_blank">HTML HEADING TAG </a></TD>
+<TD COLSPAN="28"><MaRQUEE behavior="alternate" direction="left" bgcolor="white"><a href="https://www.w3schools.com/tags/tag_comment.asp" target = "_blank">HTML COMMENT TAG</a></TD>
 </TR>
 <TR>
 <TD COLSPAN="42"><b>04. PARAGRAPH TAG</b> </TD>
-<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="https://www.w3schools.com/html/html_paragraphs.asp" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 <TR>
 <TD colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="lightgreen"><a href="" target = "_blank">HTML paragraph tag</a></td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="olive"><a href="" target = "_blank"> HTML line break tag</a> </td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="white"><a href="" target = "_blank">HTML rules tag</a></td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left" bgcolor="white"><a href="https://www.w3schools.com/tags/tag_br.asp#:~:text=The%20tag%20inserts%20a,it%20has%20no%20end%20tag." target = "_blank"> HTML line break tag</a> </td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="olive"><a href="https://www.w3schools.com/tags/tag_hr.asp" target = "_blank">HTML rules tag</a></td>
 </tr>
 <tr>
 <td COLSPAN="42"><b>05. TEXT FORMATTING TAG</b> </td>
 <td COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR>
 <TR>
-<TD colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="" target = "_blank">Bold tag</a> </td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="lime"><a href="" target = "_blank">italic tag</a></td>
-<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="" target = "_blank">underline tag</a></td>
+<TD colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="https://www.w3schools.com/tags/tag_b.asp" target = "_blank">Bold tag</a> </td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="lime"><a href="https://www.w3schools.com/tags/tag_i.asp" target = "_blank">italic tag</a></td>
+<td colspan="18"><MaRQUEE behavior="alternate" direction="left"bgcolor="FFFF00"><a href="https://www.w3schools.com/tags/tag_u.asp" target = "_blank">underline tag</a></td>
 </tr>
 <tr>
 <td colspan="42"><b>06. LIST TAG</b> </td>
-<td colspan="12"><b><font color="blue"><u><a href="" target = "_blank"> CLICK HERE TO GO</a></u></font></b> </TD>
+<td colspan="12"><b><font color="blue"><u><a href="https://www.w3schools.com/html/html_lists.asp" target = "_blank"> CLICK HERE TO GO</a></u></font></b> </TD>
 </tr>
 <tr>
-<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"> <a href="" target = "_blank">Ordered List </a></td>
-<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00ff00"><a href="" target = "_blank">Unordered List </a></td>
+<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#808000"> <a href="https://www.w3schools.com/html/html_lists_ordered.asp" target = "_blank">Ordered List </a></td>
+<td colspan="27"><MaRQUEE behavior="alternate" direction="left" bgcolor="#00ff00"><a href="https://www.w3schools.com/html/html_lists_unordered.asp" target = "_blank">Unordered List </a></td>
 </tr>
 <tr>
 <td COLSPAN="42"><b>07.TABLE TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.w3schools.com/html/html_tables.asp" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 <tr>
 <td COLSPAN="42"><b>08.ANCHOR TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.w3schools.com/tags/tag_a.asp" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 <tr>
 <td COLSPAN="42"><b>09.EMBED TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u><a href="" target = "_blank"> CLICK HERE TO GO </a></u></font></b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u><a href="https://www.w3schools.com/tags/tag_embed.asp" target = "_blank"> CLICK HERE TO GO </a></u></font></b> </TD>
 </TR>
 <tr>
 <td COLSPAN="42"><b>10. IMAGE TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.w3schools.com/tags/tag_img.asp" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR>
 <tr>
 <td COLSPAN="42"><b>11. MaRQUEE TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.geeksforgeeks.org/html-marquee-tag/" target = "_blank">CLICK HERE TO GO</a></u></font></b></TD>
 </TR>
 <tr>
 <td COLSPAN="42"><b>12.FORM TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO </a></u></font></b>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.w3schools.com/tags/tag_form.asp" target = "_blank">CLICK HERE TO GO </a></u></font></b>
 <tr>
 <td COLSPAN="42"><b>13.FRAMESETS TAG</b></TD>
-<TD COLSPAN="12"><b><font color="blue"><u> <a href="" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
+<TD COLSPAN="12"><b><font color="blue"><u> <a href="https://www.w3schools.com/tags/tag_frameset.asp" target = "_blank">CLICK HERE TO GO</a></u></font></b> </TD>
 </TR>
 </TABLE>
 </BODY>
